# homeassistant-aws-bedrock-conversation-agent

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  INSTALL.md  Makefile  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  WARP.md  apparmor.txt  bedrock_agent.py  config.yaml  hacs.json  pyproject.toml  pytest.ini  repository.json  requirements-dev.txt  requirements-test.txt  run.sh  run_tests.sh  test_bedrock.py
.github/workflows/: test.yml
custom_components/bedrock_conversation/: README.md  __init__.py  bedrock_client.py  config_flow.py  const.py  conversation.py  manifest.json  strings.json  utils.py
custom_components/bedrock_conversation/translations/: en.json
tests/: README.md  conftest.py  test_bedrock_client.py  test_config_flow.py  test_device_context.py  test_init.py  test_system_prompt.py  test_tool_calling.py  test_utils.py
translations/: en.yaml
