[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homeassistant_bedrock_conversation"
version = "1.0.8"
description = "AWS Bedrock Conversation Agent for Home Assistant"
readme = "README.md"
authors = [{name = "Cronus", email = "cronus@stolenshoe.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.35.0",
    "webcolors>=24.8.0"
]

[project.urls]
Homepage = "https://github.com/cronus42/homeassistant-aws-bedrock-conversation-agent"

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]
